--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 jules/
 fcm-2021.05.0/
 workdir/
-scripts/
 
 # contains rose.conf which we probably want to drop
 .metomi/
+
 # not currently using direnv
 .envrc
+
+# devbox configuration
+.devbox/
 
 # python venv
 .venv/
