Rudimentary Python API + udocker fixes (#11)
* move devbox stuff to a subdirectory

* update Dockerfile

* move examples into devbox directory

* transfer python stuff from jmarshrossney/pyjules

* fix copying of scripts in Dockerfile (copy directory does not work)

* huge amounts of suffering to get to this point

* remove old dockerfile

* fix python api

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-# devbox configuration
-.devbox/
-
-# JULES/FCM source and build
-jules/
-fcm/
-build/
-
-# Computed outputs from examples
-examples/**/outputs
-stdout.log
-stderr.log
-
 # Developer workbench
 workbench/
 
@@ -30,3 +17,8 @@ workbench/
 # container images
 *.tar
 *.tar.gz
+__pycache__/
+*.egg-info
+
+*.ipynb
+workbench/
