Remove Python API (transfer to NERC-CEH/jules_pytk) (#13)
* remove python part

* move contents of devbox/ to repo root

* Augment instructions in Dockerfile

* expand udocker instructions

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-# Developer workbench
-workbench/
-
-# python virtual environment
-.venv/
-
-# Analysis outputs
-*.png
-
-# notebooks
-*.ipynb
-.ipynb_checkpoints/
+# devbox configuration
+.devbox/
 
 # Credentials file
 .env
@@ -17,8 +7,17 @@ workbench/
 # container images
 *.tar
 *.tar.gz
-__pycache__/
-*.egg-info
 
-*.ipynb
+# JULES/FCM source and build
+_build/
+_download/
+fcm/
+jules/
+
+# Computed outputs from examples
+examples/**/outputs
+stdout.log
+stderr.log
+
+# Developer workbench
 workbench/
